# tagstore

./: README.md  pyproject.toml
src/tagstore/: LibUtils.py  TimeFormats.py  main.py
