[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "TagStore"
version = "0.1.0"
description = "Sync TagStudio libraries to Backblaze B2."
requires-python = ">=3.12"
dependencies = [
    "b2sdk~=2.8",
    "tagstudio",
]

[project.scripts]
tagstore = "tagstore.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tagstore"]
